src/app/features/landing/landing.component.scss
@import "../../../styles/theme/_colors.scss";
h1,
h2,
h3,
h4,
p {
  text-align: center;
}

h1 {
  margin-bottom: 40px;
}

h3 {
  margin-bottom: 20px;
}

.intro {
  h4 {
    max-width: 250px;
    margin: auto;
  }
}

//overflow hidden is set only on the wrapper on landing page
.front-container {
  overflow: hidden;
}
.bank-buttons {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: calc(50% - 10px) calc(50% - 10px);
  margin: auto;
  margin-bottom: 40px;
  max-width: 600px;

  img {
    min-width: 60px;
    max-width: 80px;
    min-height: 20px;
    height: auto;
  }
  img.sparebank1 {
    max-width: 90px;
  }
}
.data-logos {
  display: flex;
  justify-content: center;
  margin-bottom: 30px;
  img {
    margin: 0 35px;
  }
}

.list {
  background-color: $blue;
  padding: 80px 40px;
  left: -20px;
  width: calc(100% + 40px);
  position: relative;
  .block {
    margin-bottom: 80px;
    &:last-of-type {
      margin-bottom: 0px;
    }
    img {
      display: block;
      margin: auto;
      margin-bottom: 10px;
      height: 40px;
    }
    p {
      color: white;
    }
  }
}

.list.gradient {
  margin-top: -1px;
  background: linear-gradient($blue, $primary);
  margin-bottom: 80px;
  h2,
  h4 {
    margin-bottom: 40px;
    color: white;
  }
  h4:last-of-type {
    margin-bottom: 0;
  }
  img {
    margin-bottom: 40px;
    width: 100%;
    max-width: 300px;
  }
}

.horizontal-scroll {
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
  white-space: nowrap;
  width: calc(100% + 40px);

  &::-webkit-scrollbar {
    -webkit-appearance: none;
  }
  &::-webkit-scrollbar:horizontal {
    height: 11px;
  }
  &::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 2px solid white;
    background-color: rgba(0, 0, 0, 0.5);
  }
  &::-webkit-scrollbar-track {
    background-color: #fff;
    border-radius: 8px;
  }
}

.articles {
  margin-bottom: 80px;
  h2,
  h3 {
    text-align: left;
  }
  .article {
    width: 260px;
    display: inline-block;
    margin-right: 20px;
    white-space: normal;
    vertical-align: top;
    .logo {
      height: 16px;
      margin-bottom: 5px;
    }
    .image {
      height: 160px;
      width: 100%;
      background-position: center;
      background-size: cover;
      margin-bottom: 10px;
    }
  }
}
a {
  text-decoration: none;
}
.sitater {
  display: table;

  .sitatboks {
    background-color: $lightgreen;
    padding: 20px 20px 0 20px;
    min-width: 280px;
    white-space: normal;
    display: table-cell;
    border-right: 20px solid white;
    vertical-align: top;
    position: relative;
    text-align: center;
    font-size: 18px;
    line-height: 1.5;
    color: $blue;
    font-weight: 300;
    .quote {
      height: 170px;
    }
    .name {
      font-weight: 500;
      width: 100%;
      margin-top: 10px;
    }
    .bilde {
      height: 80px;
      width: 80px;
      background-position: center;
      background-size: cover;
      display: block;
      margin: auto;
      border-radius: 100%;
    }
  }
}

@media (min-width: 600px) {
  .four-columns {
    display: grid;
    grid-template-columns: calc(25% - 30px) calc(25% - 30px) calc(25% - 30px) calc(
        25% - 30px
      );
    column-gap: 40px;
    .block {
      margin-bottom: 0;
    }
  }
  .bank-buttons {
    grid-template-columns: calc(25% - 15px) calc(25% - 15px) calc(25% - 15px) calc(
        25% - 15px
      );
  }
  .intro {
    h4 {
      max-width: unset;
    }
  }
  .list-desktop {
    width: 80vw;
    left: 50%;
    transform: translateX(-50%);
    padding: 80px;
    .list-inner {
      max-width: calc(1010px - 160px);
      margin: auto;
    }
  }
  .example {
    display: grid;
    grid-gap: 40px;
    grid-template-columns:1fr 1fr;
    max-width: calc(1010px - 160px);
    margin: auto;

    h2 {
      grid-row: 1;
      grid-column-start: 1;
      grid-column-end: span 2;
      margin-bottom: 0px !important;
    }

    .second-row {
      grid-row: 2;
      grid-column-start: 1;
      grid-column-end: span 2;
      display: flex;

      h4 {
        flex-basis: 100%;
      }

      h4:first-of-type {
        margin-right: 40px;
      }
    }

    .item {
    
      &.img {
        grid-row: 3;
      display: flex;
      flex-direction: column;
      align-items: center;
      h4 {
        min-height: 110px;
        margin-bottom: 40px;
      }
      }
      
    }

    .bottom {
      grid-row: 4;
      grid-column-start: 1;
      grid-column-end: span 2;
    }
  }
  .list {
    width: 101vw;
    left: 50%;
    transform: translateX(-50%);
    padding: 80px;

    &.small-padding {
      padding-top: 40px !important;
    }
    .list-inner {
      max-width: calc(1010px - 160px);
      margin: auto;
    }
  }
  .list.gradient {
    .list-inner {
      display: flex;
      .desktop-inner {
        flex-grow: 1;
        margin-right: 80px;
      }
      img {
        margin-bottom: 0;
      }
      h2,
      h4 {
        text-align: left;
      }
    }
  }
}

//Hack for anchor scroll for FAQ section
.anchor {
  display: block;
  height: 115px;       /* same height as header */
  margin-top: -115px;  /* same height as header */
  visibility: hidden;
}

